# newtex-cli

./: .env.example  .gitignore  README.md  build-local  pyproject.toml
src/newtex/: cli.py  config.py  gitignore_utils.py  release.py  scaffold.py  validators.py
src/newtex/resources/gitignore/: tex-base.gitignore
src/newtex/resources/templates/acm-conf/: newtex-template.yml
src/newtex/resources/templates/ntu-report-template/: main.tex  mybibfile1.bib  mybibfile2.bib  newtex-template.yml
src/newtex/resources/templates/ntu-report-template/chapters/: abstract.tex  chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.tex  titlepage.tex
tests/: test_cli.py  test_config.py  test_gitignore_utils.py  test_scaffold.py  test_validators.py
